Рефакторинг кода: - Добавлено округление до сотых значения averageDurationSession. - Заменено использование .collect(Collectors.toList()) на .toList(). - Использован method reference в классе SleeplessNightsAnalyzer. - Применены рекомендации IDEA для повышения читаемости кода.